group endpoints in swagger docs
